# jsq

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
app/: Info.plist  README.md
app/BigJSON/: BigJSON-Bridging-Header.h
app/BigJSON.xcodeproj/: project.pbxproj
app/BigJSON/App/: BigJSONApp.swift
app/BigJSON/Engine/: Document+Children.swift  Document+Query.swift  Document.swift  Engine+Grammar.swift  Engine.swift
app/BigJSON/Models/: AutocompleteContext.swift  DocumentStore.swift  (+9 more)
bench/: README.md  gen.py  run.sh
bench/queries/: q1.jq  q1.jsq  q2.jq  q2.jsq  q3.jq  q3.jsq  q4.jq  q4.jsq  q5.jq  q5.jsq  q6.jq  q6.jsq  q7.jq  q7.jsq  q8.jq  q8.jsq  q9.jq  q9.jsq
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.svelte
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: bridge.rs  commands.rs  dto.rs  lib.rs  main.rs  state.rs
docs/: BENCHMARKS.md
engine/: Cargo.toml  README.md
engine/examples/: bench.rs  bench_count_by.rs  bench_distinct.rs  bench_distinct_native.rs  bench_distinct_real.rs  bench_field_set.rs  bench_open.rs  bench_query.rs  probe_load.rs  repro_loading.rs
engine/include/: engine.h
engine/src/: container_scan.rs  document.rs  error.rs  lib.rs  parser.rs  path.rs  progress.rs  render.rs  sidecar.rs  source_scan.rs
engine/src/ffi/: children.rs  index.rs  mod.rs  node.rs  query.rs
engine/src/query/: ast.rs  grammar.rs  index.rs  lexer.rs  mod.rs  value.rs
engine/src/query/evaluator/: aggregate.rs  compare.rs  fingerprint.rs  functions.rs  mod.rs  reducers.rs  render.rs  scan.rs  sort.rs  walk.rs
engine/src/query/surface/: ast.rs  completion.rs  format.rs  lower.rs  mod.rs  parser.rs
engine/tests/: grammar_manifest.rs  integration.rs  query_surface.rs
scripts/: build-engine.sh  gen_stress_json.py  release.sh
(+49 files in other folders)
