[package]
name = "jsql"
version = "1.1.0"
edition = "2021"
description = "A single-pass engine and SQL-shaped query language (jsq) for querying very large JSON files."
license = "MIT"
repository = "https://github.com/AnasImloul/jsq"
homepage = "https://github.com/AnasImloul/jsq"
readme = "README.md"
keywords = ["json", "query", "cli", "jq", "streaming"]
categories = ["command-line-utilities", "parser-implementations"]

[lib]
name = "engine"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "jsq"
path = "src/bin/jsq.rs"

[dependencies]
memmap2 = "0.9"
rustc-hash = "2"
libc = "0.2"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
codegen-units = 1
