[package]
name = "bigjson-desktop"
version = "1.2.0"
description = "BigJSON desktop UI"
edition = "2021"
license = "MIT"

[lib]
name = "bigjson_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
engine = { path = "../../engine", package = "jsql" }

# Optimize dependencies (notably the CPU-bound `jsql` engine) even in dev
# builds; our own crate stays unoptimized for fast incremental rebuilds.
[profile.dev.package."*"]
opt-level = 3
